--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s build --single"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.2",
@@ -17,20 +18,29 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.1.9",
+    "@tanstack/react-query": "^5.62.2",
     "@types/styled-components": "^5.1.34",
     "antd": "^5.22.2",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "framer-motion": "^11.12.0",
+    "i18next": "^24.0.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
-    "react-icons": "^5.3.0",
+    "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.53.2",
+    "react-i18next": "^15.1.3",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "recharts": "^2.13.3",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "sweetalert2": "^11.14.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
