--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -28,6 +28,8 @@
     "framer-motion": "^11.12.0",
     "i18next": "^24.0.5",
     "i18next-browser-languagedetector": "^8.0.0",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.8.5",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dark-mode-toggle": "^0.2.0",
