--- a/frontend-admin/package.json
+++ b/frontend-admin/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.2.0",
+    "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.1.9",
     "@tanstack/react-query": "^5.62.2",
     "@types/styled-components": "^5.1.34",
@@ -36,13 +37,15 @@
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.53.2",
+    "react-hook-form": "^7.54.0",
     "react-i18next": "^15.1.3",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.1",
     "recharts": "^2.13.3",
+    "slugify": "^1.6.6",
     "styled-components": "^6.1.13",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.14.5",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
