--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -5,8 +5,8 @@
   "author": "tuananhdev",
   "license": "MIT",
   "scripts": {
-    "build": "npx tsc -p",
-    "start": "node dist/server.ts",
+    "build": "npx tsc",
+    "start": "node dist/server.js",
     "dev": "nodemon server.ts",
     "test": "cross-env NODE_ENV=test jest --testTimeout=10000"
   },
@@ -44,6 +44,6 @@
     "@types/unidecode": "^0.1.3",
     "nodemon": "^3.1.7",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.8.2"
   }
 }
