--- a/backend-api/tsconfig.json
+++ b/backend-api/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2020",
-    "module": "commonjs",
-    "outDir": "dist/",
+    "outDir": "./dist",
+    "module": "CommonJS",
+    "target": "ES6",
+    "rootDir": ".",
     "strict": true,
     "sourceMap": true,
     "esModuleInterop": true,
