--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -26,8 +26,10 @@
     "mongoose-lean-virtuals": "^1.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "openai": "^4.87.3",
     "path": "^0.12.7",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "unidecode": "^1.1.0",
     "yup": "^1.4.0"
   },
