--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -25,7 +25,7 @@
     "@shadcn/ui": "^0.0.4",
     "antd": "^5.22.7",
     "autoprefixer": "^10.4.20",
-    "axios": "^1.7.9",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -45,9 +45,11 @@
     "react-loading-skeleton": "^3.5.0",
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.2",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.1.15",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
@@ -66,6 +68,7 @@
     "@types/react-dom": "^19",
     "@types/react-slick": "^0",
     "@types/slick-carousel": "^1",
+    "@types/socket.io-client": "^3.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "postcss": "^8.4.49",
