finished product list in HomePage

--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -30,12 +30,14 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.469.0",
     "mongodb": "^6.12.0",
+    "motion": "^12.5.0",
     "next": "^15.1.2",
     "next-auth": "^4.24.11",
     "number-to-words": "^1.2.4",
+    "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
     "react-breadcrumbs-dynamic": "^1.2.1",
     "react-checkbox-group": "^5.0.2",
