--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -77,6 +77,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.1",
     "postcss": "^8.4.49",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
