--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -22,6 +22,7 @@
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-slider": "^1.2.3",
     "@shadcn/ui": "^0.0.4",
     "antd": "^5.22.7",
     "aos": "^2.3.4",
