--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "brcypt": "^1.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "compression": "^1.7.5",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
