--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -54,6 +54,7 @@
     "react-slick": "^0.30.3",
     "react-spring": "^9.7.5",
     "react-toastify": "^11.0.5",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "swiper": "^11.1.15",
