--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -21,8 +21,12 @@
     "@mui/material": "^6.3.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@shadcn/ui": "^0.0.4",
     "antd": "^5.22.7",
@@ -42,9 +46,11 @@
     "number-to-words": "^1.2.4",
     "plaiceholder": "^3.0.0",
     "react": "^19.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-breadcrumbs-dynamic": "^1.2.1",
     "react-checkbox-group": "^5.0.2",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
@@ -72,6 +78,7 @@
     "@types/parse-json": "^4.0.2",
     "@types/prop-types": "^15.7.14",
     "@types/react": "^19",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-breadcrumbs-dynamic": "^1",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0",
