--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -56,6 +56,7 @@
     "react-loading-skeleton": "^3.5.0",
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.10.1",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.3",
     "react-spring": "^9.7.5",
