--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -16,6 +16,8 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@mantine/core": "^7.17.4",
+    "@mantine/hooks": "^7.17.4",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^6.3.0",
@@ -28,6 +30,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
+    "@react-oauth/google": "^0.12.1",
     "@shadcn/ui": "^0.0.4",
     "antd": "^5.22.7",
     "aos": "^2.3.4",
@@ -38,6 +41,7 @@
     "dotenv": "^16.4.7",
     "formik": "^2.4.6",
     "framer-motion": "^12.5.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.483.0",
     "mongodb": "^6.12.0",
     "motion": "^12.5.0",
@@ -54,6 +58,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-modal": "^3.16.3",
     "react-paginate": "^8.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.10.1",
@@ -82,6 +87,7 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-breadcrumbs-dynamic": "^1",
     "@types/react-dom": "^19",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0",
     "@types/slick-carousel": "^1",
     "@types/socket.io-client": "^3.0.0",
