--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -21,7 +21,7 @@
     "@mantine/hooks": "^7.17.4",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.3.0",
-    "@mui/material": "^6.3.0",
+    "@mui/material": "^7.0.2",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -33,6 +33,7 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@react-oauth/google": "^0.12.1",
     "@shadcn/ui": "^0.0.4",
+    "@smastrom/react-rating": "^1.5.0",
     "antd": "^5.22.7",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
@@ -61,10 +62,14 @@
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
     "react-paginate": "^8.2.0",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.10.1",
     "react-simple-chatbot": "^0.6.1",
+    "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.16.1",
     "react-spring": "^9.7.5",
     "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
