--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -44,6 +44,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.5.0",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.483.0",
     "mongodb": "^6.12.0",
     "motion": "^12.5.0",
@@ -72,6 +73,7 @@
     "react-spinners": "^0.16.1",
     "react-spring": "^9.7.5",
     "react-toastify": "^11.0.5",
+    "react-tooltip": "^5.28.1",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
