--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -11,6 +11,7 @@
     "test": "cross-env NODE_ENV=test jest --testTimeout=10000"
   },
   "dependencies": {
+    "@vonage/server-sdk": "^3.21.0",
     "bcrypt": "^5.1.1",
     "brcypt": "^1.0.1",
     "class-transformer": "^0.5.1",
@@ -32,6 +33,7 @@
     "path": "^0.12.7",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
+    "twilio": "^5.6.1",
     "unidecode": "^1.1.0",
     "yup": "^1.4.0"
   },
