--- a/nextjs-frontend-user/package.json
+++ b/nextjs-frontend-user/package.json
@@ -17,8 +17,8 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
-    "@mantine/core": "^7.17.4",
-    "@mantine/hooks": "^7.17.4",
+    "@mantine/core": "^8.0.1",
+    "@mantine/hooks": "^8.0.1",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.3.0",
     "@mui/material": "^7.0.2",
@@ -62,6 +62,7 @@
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
+    "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
     "react-rating": "^2.0.5",
     "react-rating-stars-component": "^2.2.0",
